<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:layout_width="fill_parent" android:layout_height="fill_parent"
android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
android:background="@drawable/background"
        >
    
<TextView android:id="@+id/startingMg_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/startingMg_label"
    android:textColor="@color/label_color" />
<EditText android:id="@+id/startingMg_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:numeric="decimal"></EditText>

<TextView android:id="@+id/mgPerPill_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mgPerPill_label"
     android:textColor="@color/label_color" />
<EditText android:id="@+id/mgPerPill_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:numeric="decimal"></EditText>

<TextView android:id="@+id/reduceMg_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reduceMg_label"
     android:textColor="@color/label_color" />
<EditText android:id="@+id/reduceMg_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:numeric="decimal"></EditText>

<TextView android:id="@+id/reduceDays_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reduceDays_label"
     android:textColor="@color/label_color" />
<Spinner android:id="@+id/reduceDays_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:prompt="@string/reduceDays_prompt" />

<TextView android:id="@+id/numDays_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/numDays_label"
     android:textColor="@color/label_color" />
<Spinner android:id="@+id/numDays_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:prompt="@string/numDays_prompt" />

<Button android:id="@+id/calc_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/calc_label" android:layout_gravity="center_horizontal"></Button>

</LinearLayout>
